--- a/8.Puzzle.md
+++ b/8.Puzzle.md
@@ -1,6 +1,7 @@
 title: 8 Puzzle
 categories: project:princeton algorithms
 tags: [priority queue, game tree]
+date: 2016-02-26
 ---
 
 ### Introduction
