--- a/8.Puzzle.md
+++ b/8.Puzzle.md
@@ -3,7 +3,9 @@ categories: project:princeton algorithms
 tags: [priority queue, game tree]
 date: 2016-02-26
 ---
-
+<figure>
+    <img src="/images/8 puzzle.png">
+</figure>
 ### Introduction
 > <font size=2>The 8-puzzle (also called Gem Puzzle, Boss Puzzle, Game of Eight, Mystic Square and many others) is a sliding puzzle that consists of a frame of numbered square tiles in random order with one tile missing. The object of the puzzle is to place the tiles in order (see diagram) by making sliding moves that use the empty space. - [wikipedia](https://en.wikipedia.org/wiki/15_puzzle)</font>
 
