--- a/8.Puzzle.md
+++ b/8.Puzzle.md
@@ -1,13 +1,11 @@
 title: 8 Puzzle
 categories: 
-    - project
-    - princeton algorithms
-tags: [priority queue, game tree]
+    - Project
+    - Princeton Algorithms
+tags: [Queue, Priority Queue, Game Tree]
 date: 2016-02-26
 ---
-<figure>
-    <img src="/images/8.puzzle.png">
-</figure>
+<img src="https://farm2.staticflickr.com/1656/25818603901_e03ec3fafc_o.png" width="520" height="239">
 ### Introduction
 > <font size=2>The 8-puzzle (also called Gem Puzzle, Boss Puzzle, Game of Eight, Mystic Square and many others) is a sliding puzzle that consists of a frame of numbered square tiles in random order with one tile missing. The object of the puzzle is to place the tiles in order (see diagram) by making sliding moves that use the empty space. - [wikipedia](https://en.wikipedia.org/wiki/15_puzzle)</font>
 
